# DEM_Encoder-Decoder

./: .gitignore  Plotting.ipynb  README.org  Training.ipynb  Untitled.ipynb  colab_training.ipynb  help.py  model.py  notes.org  pyproject.toml  shell.nix  topo.org  train.py
data/: NN8100_4PPM_LAS_PHASE4.laz  test.tif
model/: dem_ae.py
utils/: data_splitter.py  dataloader.py  laz2tif.sh  tif_splitter.py
