[tool.poetry]
name = "topo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rasterio = "^1.2.6"
torch = "^1.9.0"
matplotlib = "^3.4.2"
notebook = "^6.4.2"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
